# framework-translator

./: .clang-format  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
crates/clang-importer-sys/: Cargo.toml  build.rs
crates/clang-importer-sys/cxx/include/cxx/llvm/: HashCode.hxx  StringRef.hxx  Triple.hxx  Twine.hxx
crates/clang-importer-sys/cxx/include/cxx/swift/: ASTContext.hxx  ClangImporter.hxx  ClangImporterOptions.hxx  DiagnosticEngine.hxx  FunctionBodySkipping.hxx  LangOptions.hxx  SILOptions.hxx  SearchPathOptions.hxx  SourceManager.hxx  (+1 more)
crates/clang-importer-sys/rust/src/: clang.rs  ffi.rs  lib.rs  llvm.rs  swift.rs
crates/clang-importer-sys/rust/src/ffi/: llvm.rs  swift.rs
crates/clang-importer-sys/rust/src/llvm/: triple.rs
crates/clang-importer-sys/rust/src/swift/: clang_importer_options.rs  symbolgraphgen.rs
crates/clang-importer-sys/tests/: ast_context.rs  clang_importer.rs  clang_importer_options.rs  common.rs  diagnostic_engine.rs  lang_options.rs  main.rs  search_path_options.rs  sil_options.rs  source_manager.rs  string_ref.rs  symbol_graph_options.rs  type_checker_options.rs
crates/clang-importer-sys/tests/llvm/: mod.rs  string_ref.rs  triple.rs  twine.rs
crates/clang-importer-sys/tests/swift/: ast_context.rs  clang_importer.rs  clang_importer_options.rs  diagnostic_engine.rs  lang_options.rs  mod.rs  search_path_options.rs  sil_options.rs  source_manager.rs  type_checker_options.rs
crates/clang-importer-sys/tests/swift/symbolgraphgen/: mod.rs  symbol_graph_options.rs
crates/cli/: Cargo.toml
(+30 files in other folders)
