[package]
edition = "2021"
name = "clang-importer-sys"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/framework-translator"
description = "Rust bindings for Swift's ClangImporter"
readme = "../README.md"

[lib]
name = "clang_importer_sys"
path = "rust/src/lib.rs"

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }

[dev-dependencies]
static_assertions = "1.1"
tap = "1.0"
